--- a/templates/index.html
+++ b/templates/index.html
@@ -47,7 +47,7 @@
                                 <h3 class="text-left"><a href="{{url_for('wiki_search')}}">Wiki/Youtube Library</a></h3>
                             </div>
                             <div class="swiper-slide client-box">
-                                <h3 class="text-left"><a href="{{url_for('wiki_search')}}">Data Visualization</a></h3>
+                                <h3 class="text-left"><a href="{{url_for('data_analysis')}}">Data Visualization</a></h3>
                             </div>
                             <div class="swiper-slide client-box">
                                 <h3 class="text-left"><a href="{{url_for('wiki_search')}}">Something Else</a></h3>
